examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/succ_true_reconstruct.st
language core;

extend with #type-reconstruction;

fn main(n : Nat) -> Bool {
    return succ(succ(true))
}

//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
